--- a/LiveliGoods/LiveliGoods/Base.lproj/Main.storyboard
+++ b/LiveliGoods/LiveliGoods/Base.lproj/Main.storyboard
@@ -248,27 +248,6 @@
             </objects>
             <point key="canvasLocation" x="-176.92307692307691" y="557.34597156398104"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="4Ma-b7-Vsp">
-            <objects>
-                <viewController id="lwZ-Br-zZ9" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Prt-46-iHJ">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HaJ-sb-Sjp">
-                                <rect key="frame" x="-3" y="207" width="88" height="78"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </stackView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="Gx9-9y-x5h"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KEG-53-k0F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-123" y="1201"/>
-        </scene>
         <!--Steps-->
         <scene sceneID="jyl-7H-YUz">
             <objects>
@@ -294,7 +273,7 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhb-2L-ndM" userLabel="0">
                                         <rect key="frame" x="12" y="8" width="240" height="80"/>
-                                        <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="50"/>
+                                        <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -542,12 +521,14 @@
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="pyf-S4-Zm3"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="LiveliGoods Journal                            &gt;">
+                                        <buttonConfiguration key="configuration" style="filled" title="LiveliGoods Journal                            ">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="21"/>
                                             <color key="baseBackgroundColor" red="0.30196078430000001" green="0.6588235294" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <segue destination="s3p-Xh-XUW" kind="show" id="LNs-SV-26y"/>
+                                            <segue destination="s3p-Xh-XUW" kind="popoverPresentation" popoverAnchorView="Tuk-ZD-I7u" id="Qzt-tv-WNW">
+                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                            </segue>
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="9Im-DK-Ch9">
@@ -878,18 +859,18 @@
             <objects>
                 <viewController storyboardIdentifier="newJournalEntryVC" modalPresentationStyle="fullScreen" id="ohe-h5-05l" customClass="JournalEntryViewController" customModule="LiveliGoods" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LKT-dc-ENT">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xeh-Xc-fvs">
-                                <rect key="frame" x="16" y="74" width="358" height="750"/>
+                                <rect key="frame" x="16" y="30" width="358" height="740"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="ehg-hQ-U6q">
-                                <rect key="frame" x="16" y="44" width="358" height="30"/>
+                                <rect key="frame" x="16" y="0.0" width="358" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Kva-Ve-CZn"/>
                                     <constraint firstAttribute="height" constant="30" id="vlz-ag-DIn"/>
@@ -1025,24 +1006,29 @@
             <objects>
                 <viewController storyboardIdentifier="JournalHomeVC" modalPresentationStyle="fullScreen" id="s3p-Xh-XUW" customClass="JournalHomeViewController" customModule="LiveliGoods" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4dV-NW-7MM">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Journal Entries Yet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XzZ-zt-MBl">
-                                <rect key="frame" x="111" y="367.66666666666669" width="168" height="108.66666666666669"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="FFa-aU-In0">
-                                <rect key="frame" x="0.0" y="44" width="390" height="717"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="zws-Sv-UoA">
+                                <rect key="frame" x="0.0" y="400" width="390" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="No Entries. Add Entry"/>
+                                <connections>
+                                    <segue destination="ohe-h5-05l" kind="popoverPresentation" popoverAnchorView="zws-Sv-UoA" id="9Ft-gG-pfu">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
+                                </connections>
+                            </button>
+                            <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="FFa-aU-In0">
+                                <rect key="frame" x="0.0" y="116" width="390" height="625"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="detailButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="journalcell" editingAccessoryType="detailButton" textLabel="6sP-pp-vGx" detailTextLabel="Sr5-FT-ZgM" style="IBUITableViewCellStyleSubtitle" id="wce-rL-3pq">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="43.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wce-rL-3pq" id="8iq-4s-Lxd">
-                                            <rect key="frame" x="0.0" y="0.0" width="349.33333333333331" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="349.33333333333331" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6sP-pp-vGx">
@@ -1071,13 +1057,9 @@
                         <viewLayoutGuide key="safeArea" id="lrm-Ib-ImF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="FFa-aU-In0" firstAttribute="top" secondItem="lrm-Ib-ImF" secondAttribute="top" id="Gbq-uG-PoR"/>
+                            <constraint firstItem="FFa-aU-In0" firstAttribute="top" secondItem="lrm-Ib-ImF" secondAttribute="top" constant="116" id="Gbq-uG-PoR"/>
                             <constraint firstItem="FFa-aU-In0" firstAttribute="leading" secondItem="lrm-Ib-ImF" secondAttribute="leading" id="Pr2-MP-KTU"/>
-                            <constraint firstItem="XzZ-zt-MBl" firstAttribute="centerX" secondItem="FFa-aU-In0" secondAttribute="centerX" id="Y63-xH-2PO"/>
-                            <constraint firstItem="XzZ-zt-MBl" firstAttribute="centerX" secondItem="4dV-NW-7MM" secondAttribute="centerX" id="Yn4-aq-Y16"/>
-                            <constraint firstItem="XzZ-zt-MBl" firstAttribute="centerY" secondItem="4dV-NW-7MM" secondAttribute="centerY" id="aZU-Pk-Yqb"/>
                             <constraint firstItem="FFa-aU-In0" firstAttribute="bottom" secondItem="lrm-Ib-ImF" secondAttribute="bottom" id="m1A-h6-SR2"/>
-                            <constraint firstItem="XzZ-zt-MBl" firstAttribute="top" secondItem="lrm-Ib-ImF" secondAttribute="top" constant="323.66666666666669" id="tiY-Do-6DK"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -1086,19 +1068,17 @@
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="newJournalEntry:" destination="s3p-Xh-XUW" id="HRL-AH-91d"/>
-                                <segue destination="ohe-h5-05l" kind="show" id="qmO-oc-g31"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="journalListTable" destination="FFa-aU-In0" id="pyC-Q7-fcw"/>
-                        <outlet property="noJournalsLabel" destination="XzZ-zt-MBl" id="dNG-mt-shC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eyO-Cm-tO4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3317" y="1582"/>
+            <point key="canvasLocation" x="3316.9230769230767" y="1581.7535545023695"/>
         </scene>
         <!--Food-->
         <scene sceneID="LlB-eo-agc">
@@ -1124,11 +1104,11 @@
             <objects>
                 <viewController storyboardIdentifier="JournalsVC" modalPresentationStyle="fullScreen" id="HfI-Zn-NKw" customClass="JournalViewController" customModule="LiveliGoods" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="B2x-PD-WYS">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRT-1d-7TO">
-                                <rect key="frame" x="16" y="44" width="358" height="40"/>
+                                <rect key="frame" x="16" y="0.0" width="358" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="f1b-d3-Cmg"/>
                                 </constraints>
@@ -1137,7 +1117,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hNN-qi-Jtd">
-                                <rect key="frame" x="16" y="92" width="358" height="732"/>
+                                <rect key="frame" x="16" y="48" width="358" height="722"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
